fix spacing

--- a/src/profile/components/ProfileCard/style.less
+++ b/src/profile/components/ProfileCard/style.less
@@ -43,6 +43,10 @@
     overflow-x: scroll;
     scrollbar-width: none;
     vertical-align: middle;
+
+    .profile-card__level {
+      margin-right: 20px;
+    }
   }
 
   .info::-webkit-scrollbar {
